Archive2/60/2c5f89b2723c01/output
main.cpp: In function 'int main()':
main.cpp:8:18: error: invalid initialization of non-const reference of type 'Object&' from an rvalue of type 'Object'
     take(Object());
                  ^
main.cpp:5:6: note: in passing argument 1 of 'void take(Object&)'
 void take(Object &) {}
      ^
